--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "dot-prop": "^5.1.1",
     "elliptic": "^6.5.3",
     "firebase": "7.14.2",
+    "kind-of": "^6.0.3",
+    "lodash": "^4.17.19",
+    "minimist": "^0.2.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
