--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "kind-of": "^6.0.3",
     "lodash": "^4.17.19",
     "minimist": "^0.2.1",
+    "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
