--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "kind-of": "^6.0.3",
     "lodash": "^4.17.19",
     "minimist": "^0.2.1",
-    "node-sass": "^4.13.1",
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -30,7 +30,8 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "serialize-javascript": "^3.1.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "yargs-parser": "^13.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
