--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
     "node-sass": "^4.13.1",
+    "object-path": "^0.11.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
