--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "immer": "1.10.0",
-    "node-notifier": "5.4.2",
-    "node-sass": "^4.13.0",
     "acorn": "^7.1.1",
     "dot-prop": "^5.1.1",
     "elliptic": "^6.5.3",
     "firebase": "7.14.2",
+    "immer": "1.10.0",
     "kind-of": "^6.0.3",
     "lodash": "^4.17.19",
     "minimist": "^0.2.1",
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
+    "node-notifier": "5.4.2",
     "node-sass": "^4.13.1",
     "object-path": "^0.11.5",
     "react": "^16.12.0",
@@ -34,6 +33,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "serialize-javascript": "^3.1.0",
+    "ssri": "6.0.1",
     "styled-components": "^5.0.0",
     "yargs-parser": "^13.1.2"
   },
