--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "immer": "8.0.1",
     "kind-of": "^6.0.3",
     "lodash": "^4.17.19",
+    "merge-deep": "^3.0.3",
     "minimist": "^0.2.1",
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
