--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-notifier": "8.0.1",
     "node-sass": "^4.13.1",
     "object-path": "^0.11.5",
+    "postcss": "^7.0.36",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
